--- a/files/login.html
+++ b/files/login.html
@@ -14,10 +14,31 @@
       </div>
 
       <div class="input-group">
-        <input type="password" id="password" required />
+        <input type="password" id="pass" required />
         <label for="password">Password</label>
       </div>
       <a href="adminpanel.html" class="lsbutton">Login</a>
     </div>
+
+
+    <script>
+        const name = "admin";
+        const password = "admin";
+
+        function checkuser(){
+            const user = document.getElementById('username');
+            const userpass = document.getElementById('pass');
+            const log = document.getElementById('login');
+            if(user.value.trim() == name && userpass.value.trim() == password){
+                log.href = "adminpanel.html"; 
+            }
+            else{
+                alert("wrong id or password");
+            }
+
+            
+        }
+
+    </script>
   </body>
 </html>
