--- a/files/userpanel.html
+++ b/files/userpanel.html
@@ -23,8 +23,8 @@
 
       <a class="user" onclick="openpanel('panel-status')">
         <div class="admin">
-          <i class="fa-solid fa-list"></i>
-          <p>Complaint Status</p>
+          <i class="fa-solid fa-list" style="margin-top: 50px;"></i>
+          <p style="margin-top: 5px;">Complaint Status</p>
         </div>
       </a>
     </div>
